// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly when a user ID is available and loaded 1`] = `
<body>
  <div>
    <div
      aria-busy="false"
      aria-expanded="false"
      class="ui item dropdown"
      data-test="UserMenu"
      role="listbox"
      tabindex="0"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="text"
        role="alert"
      >
        Graham
      </div>
      <i
        aria-hidden="true"
        class="dropdown icon"
      />
      <div
        class="menu transition"
      >
        <a
          class="ui item"
          href="/profile"
        >
          <i
            aria-hidden="true"
            class="edit icon"
          />
          Edit Profile
        </a>
        <div
          class="divider"
        />
        <div
          class="ui item"
        >
          <i
            aria-hidden="true"
            class="log out icon"
          />
          Log Out
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Renders correctly when a user ID is available but not yet loaded 1`] = `
<body>
  <div>
    <div
      aria-busy="true"
      aria-expanded="false"
      class="ui loading item dropdown"
      data-test="UserMenu"
      role="listbox"
      tabindex="0"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        class="text"
        role="alert"
      />
      <i
        aria-hidden="true"
        class="dropdown icon"
      />
      <div
        class="menu transition"
      >
        <a
          class="ui item"
          href="/profile"
        >
          <i
            aria-hidden="true"
            class="edit icon"
          />
          Edit Profile
        </a>
        <div
          class="divider"
        />
        <div
          class="ui item"
        >
          <i
            aria-hidden="true"
            class="log out icon"
          />
          Log Out
        </div>
      </div>
    </div>
  </div>
</body>
`;
